add api upload and front end handle upload
