# backend-hackathon/internal/response/image_response.go
@@ -1,0 +1,7 @@
+package response
+
+// ImageResponse wraps a single image item
+type ImageResponse struct {
+    BaseResponse
+    Data ImageItem `json:"data"`
+}
